fix(ui): include add new buttons on collapsed sidebar

--- a/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
@@ -103,11 +103,6 @@ body.yellow ::selection {
 a:hover, header .add:hover, tr.controlData a:hover {
     color: var(--baseLightColor);
 }
-
-.set li a:hover {
-    color: var(--baseColor);
-}
-
 .textGradient {
     color: var(--baseColor);
     background-image: var(--baseGradient);
@@ -132,11 +127,7 @@ th, table th, table.clusterConfig td.label, tr.details table .label, .yaml .labe
     font-weight: 600;
 }
 
-#sets h3, #sets h4 {
-    text-transform: capitalize;
-}
-
-body, #sets h4, #sets h3, #side a.router-link-exact-active, th, .tabs a, #keyword, table.clusterConfig td.label, tr.details table .label, .details th, td.timestamp span.ms, span.timestamp span.ms, .yaml .label, #logo h1, #helpTooltip, .form label, .options label, .daterangepicker td.available:not(.off):not(.in-range):not(.active), .form input, .form select, .form textarea, ul.select, .options select, #delete .tooltip form input, .darkmode #sets h4, .darkmode h4, .darkmode #sets h3, .darkmode h3, .darkmode h2, .darkmode thead, .darkmode .tabs a, .darkmode #keyword, .darkmode .options li.textFilter .search, .darkmode #help h3.title, .darkmode table.clusterConfig td.label, .darkmode .details th, .darkmode tr.details table td.label, .darkmode .yaml .label, .darkmode .logMessage .param, .darkmode .logDetails td.param, .darkmode .form label, .darkmode ul.select a {
+body, #sets h4, #sets h3, th, .tabs a, #keyword, table.clusterConfig td.label, tr.details table .label, .details th, td.timestamp span.ms, span.timestamp span.ms, .yaml .label, #logo h1, #helpTooltip, .form label, .options label, .daterangepicker td.available:not(.off):not(.in-range):not(.active), .form input, .form select, .form textarea, ul.select, .options select, #delete .tooltip form input, .darkmode #sets h4, .darkmode h4, .darkmode #sets h3, .darkmode h3, .darkmode h2, .darkmode thead, .darkmode .tabs a, .darkmode #keyword, .darkmode .options li.textFilter .search, .darkmode #help h3.title, .darkmode table.clusterConfig td.label, .darkmode .details th, .darkmode tr.details table td.label, .darkmode .yaml .label, .darkmode .logMessage .param, .darkmode .logDetails td.param, .darkmode .form label, .darkmode ul.select a {
     color: var(--textColor);
 }
 
@@ -242,11 +233,11 @@ td.operationType.securityUpgrade span:before,  .card .operationType.securityUpgr
     border-color: var(--borderColor);
 }
 
-.set.active, .set.active a:hover, .podStatus tr, ul.select.active li.selected, .darkmode .podStatus tr, .darkmode .clusterConfig tr, .darkmode .form input, .darkmode .form select, .darkmode .form textarea, .darkmode ul#postgresVersion, .darkmode ul#postgresVersion ul, .darkmode #contentTooltip .info, .darkmode ul.select.active li.selected, .clusterConfig tr:nth-child(odd), .crdDetails tr:nth-child(odd), label.switch {
+.set.active, .podStatus tr, ul.select.active li.selected, .darkmode .podStatus tr, .darkmode .clusterConfig tr, .darkmode .form input, .darkmode .form select, .darkmode .form textarea, .darkmode ul#postgresVersion, .darkmode ul#postgresVersion ul, .darkmode #contentTooltip .info, .darkmode ul.select.active li.selected, .clusterConfig tr:nth-child(odd), .crdDetails tr:nth-child(odd), label.switch {
     background-color: var(--activeBg);
 }
 
-.form input, ul#postgresVersion, .form select, .form textarea, #keyword, .options label, .options select, #signup form input, #side a.router-link-exact-active, table tr:nth-child(4n+2) + tr.details th, table tr:nth-child(4n+2) + tr.details tr:nth-child(even), .logDetails tr:nth-child(even) {
+.form input, ul#postgresVersion, .form select, .form textarea, #keyword, .options label, .options select, #signup form input, table tr:nth-child(4n+2) + tr.details th, table tr:nth-child(4n+2) + tr.details tr:nth-child(even), .logDetails tr:nth-child(even) {
     background-color: var(--inputBg);
 }
 
@@ -524,10 +515,6 @@ table:not(.fullWidth) td.label {
     margin-left: 25px;
 }
 
-.collapsed #side {
-    width: 50px;
-}
-
 .collapsed .hideCollapsed {
     display: none !important;
 }
@@ -558,15 +545,6 @@ table:not(.fullWidth) td.label {
 
 .showCollapsed .router-link-exact-active.router-link-active:not(:hover) {
     background: var(--bgColor) !important;
-}
-
-.collapsed #current-namespace {
-    height: 70px;
-}
-
-.collapsed #current-namespace svg {
-    margin: 0;
-    transform: scale(0.8);
 }
 
 .collapsed #main {
